--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@astrojs/mdx": "^1.1.0",
+    "@astrojs/rss": "^3.0.0",
     "@astrojs/tailwind": "^5.0.0",
     "astro": "^3.1.4",
     "katex": "^0.16.8",
