--- a/package.json
+++ b/package.json
@@ -8,14 +8,20 @@
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
+    "preview:host": "astro preview --host",
+    "deploy": "bunx firebase deploy",
     "astro": "astro"
   },
   "dependencies": {
     "@astrojs/mdx": "^1.1.0",
+    "@astrojs/preact": "^3.0.1",
     "@astrojs/rss": "^3.0.0",
     "@astrojs/tailwind": "^5.0.0",
     "astro": "^3.1.4",
+    "firebase": "^10.4.0",
     "katex": "^0.16.8",
+    "preact": "^10.6.5",
+    "sharp": "^0.32.6",
     "tailwindcss": "^3.0.24"
   },
   "devDependencies": {
