--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@astrojs/mdx": "^1.1.0",
     "@astrojs/preact": "^3.0.1",
     "@astrojs/rss": "^3.0.0",
+    "@astrojs/sitemap": "^3.0.2",
     "@astrojs/tailwind": "^5.0.0",
     "astro": "^3.1.4",
     "firebase": "^10.5.0",
