--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "astro build",
     "preview": "astro preview",
     "preview:host": "astro preview --host",
-    "deploy": "bunx firebase deploy",
+    "deploy": "bunx firebase deploy --only hosting:neo-lorem",
     "astro": "astro"
   },
   "dependencies": {
@@ -25,6 +25,7 @@
     "tailwindcss": "^3.0.24"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.10"
+    "@tailwindcss/typography": "^0.5.10",
+    "tw-colors": "^3.3.1"
   }
 }
