--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@astrojs/tailwind": "^5.0.0",
     "astro": "^3.1.4",
     "firebase": "^10.5.0",
+    "flowbite": "^2.2.0",
     "katex": "^0.16.8",
     "preact": "^10.6.5",
     "tailwindcss": "^3.0.24"
