actualización de la tabla de contenidos y preparación para opcinoes de accesibilidad

--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/mdx": "^1.1.0",
-    "@astrojs/react": "^3.0.6",
-    "@astrojs/rss": "^3.0.0",
-    "@astrojs/sitemap": "^3.0.2",
-    "@astrojs/tailwind": "^5.0.0",
-    "astro": "^3.1.4",
+    "@astrojs/mdx": "2.0.2",
+    "@astrojs/react": "3.0.8",
+    "@astrojs/rss": "4.0.1",
+    "@astrojs/sitemap": "3.0.3",
+    "@astrojs/tailwind": "5.0.4",
+    "astro": "4.0.7",
     "firebase": "^10.5.0",
     "flowbite": "^2.2.0",
     "katex": "^0.16.8",
